# app/Models/Package.php
@@ -1,0 +1,39 @@
+<?php
+
+namespace App\Models;
+
+use App\Traits\HasSnowflakeId;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\SoftDeletes;
+
+class Package extends Model
+{
+    use HasSnowflakeId, SoftDeletes;
+
+    public $incrementing = false;
+    protected $keyType = 'int';
+
+    /**
+     * The table associated with the model.
+     *
+     * @var string
+     */
+    protected $table = 'packages';
+
+    /**
+     * The attributes that are mass assignable.
+     *
+     * @var list<string>
+     */
+    protected $fillable = [
+        'name',
+        'code',
+        'description',
+        'is_active',
+    ];
+
+    public function packageItems()
+    {
+        return $this->hasMany(PackageItem::class);
+    }
+}
